k8s/ingress/definition.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  namespace: my-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: <domene>
      http:
        paths:
          - backend:
              service:
                name: my-app
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - <domene>
      secretName: my-app-tls
