k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
spec:
  rules:
  - host: <your subdomain>.computas.dev # TODO: switch to your domain
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 80
  tls:
  - hosts:
    - <your subdomain>.computas.dev # TODO: switch to your domain
    secretName: app-certificate-secret
